[DevTools] better errors for Target.sendMessageToTarget

Methods should generate notification with error on invalid
message.

inspector_protocol rolled to bdfbb48cdc1a1ccd7dc9456506feab46c8ffe90c:
- [inspector_protocol] added UberDispatcher::getCommandName

R=dgozman@chromium.org

Bug: chromium:775105
Change-Id: I47be11a4b1203781472a83c8ae38566a286f1e4d
Reviewed-on: https://chromium-review.googlesource.com/722662
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510698}
Former-commit-id: 78e1cc855a8e7d3289e4ca0cc3b698d5ff954e26